= CHANGES

== 0.10.4 (Not Yet Released)

* FIX #690 adds proper require to Gemfile
* FIX #691 fixes logger error when rendering templates

== 0.10.3

* NEW Upgrade to recently released Sinatra 1.3
* FIX #679 replaces rack-flash with sinatra-flash
* NEW #667 Adds mintest testing component to generator
* FIX #634 Removes less gem dependency for less gen
* NEW #662 create "content_for?" helper (@mlightner)
* FIX #669 Fixes YAML locale files to be psych compliant (@skade)
* NEW Fixes logger to be much cleaner with better formatting
* FIX issue with generator runner for https templates (@xavierRiley)
* FIX #669 YML locale files are now psych compliant
* NEW #658 removes shoulda and switch to minitest (with aliases)
* NEW #657 Converts RDoc to YARD and improve all docs
* FIX Document example of Padrino::Admin::AccessControl (@benjaminoakes)
* NEW Adds Latvian locale translation (@ugisozols)
* FIX #686 Halt status with code responds as expected

== 0.10.2

* NEW support for TravisCI with build configurations
* NEW support of mysql2 when using sequel as adapter (@rafaelss)
* NEW #636 print which views are called in log when in development mode (@minikomi)
* NEW support of ActiveRecord 3.1 and ActiveSupport 3.1
* NEW yard doc available {here}[http://www.padrinorb.com/api/index.html]
* FIX #624 potential issue with libxml-ruby (@farcaller)
* FIX #618 allow to map routes using "index" reserved word
* FIX #633 RACK_ENV now is respected also using bundled server
* FIX rendering error for partials when they start with a forward slash (@philly-mac)
* FIX all our sources files now are vim friendly
* FIX preserve the original options when resolving a template (@Xylakant)
* FIX bad path in shoulda test generator (@futurechimp)
* FIX require path in model tests to generate correctly if specifing app
* FIX #647 allow to override view errors
* FIX #646 compat with ActiveRecord >3.0.10
* FIX #381 escape "<> from tag helpers values
* FIX #639 prevent XSS from admin login (@eikes)